--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,49 +1,54 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html, body {
-    margin: 0;
-    font-family: Inconsolata, sans-serif;
-    background-color: red;
+  margin: 0;
+  font-family: Inconsolata, sans-serif;
+  background-color: red;
 }
 
 .content {
-	background-color: black;
-	height: 100vh;
-	width: 100vw;
-	padding: 10px;
-	display: table;
+  background-color: black;
+  height: 100vh;
+  width: 100vw;
+  padding: 10px;
+  display: table;
 }
 
 
 /* Drop zone */
+
 .drop-zone {
-    color: #77dd77;
-    border: 2px dashed #77dd77;
-    border-radius: 10px;
-		display: table-cell;
-    text-align: center;
-    vertical-align: middle;
+  color: #77dd77;
+  border: 2px dashed #77dd77;
+  border-radius: 10px;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
 }
+
 
 /* Video player */
+
 div.video-controls {
-	display: table-cell;
-	vertical-align: middle;
-	text-align: center;
-	background-color: black;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  background-color: black;
 }
 
-div.inner-video-controls i {
-    color: #77dd77;
-    padding: 3vw;
-    border: 2px solid;
-    border-radius: 10px;
-		cursor: pointer;
+div.inner-video-controls button {
+  background: black;
+  border: 1px solid #77dd77;
+  border-radius: 10px;
+  color: #77dd77;
+  padding: 10px;
+  letter-spacing: 1px;
+  cursor: pointer;
 }
 
-div.inner-video-controls i:hover{
-		background-color: #77dd77;
-    color: black;
+div.inner-video-controls button:hover {
+  background-color: #77dd77;
+  color: black;
 }
