Fixed drop view appearance

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,6 +16,17 @@ html, body {
   display: table;
 }
 
+/** Splash view **/
+
+.loading {
+  width: 100%;
+  height: 100%
+}
+
+.loading > p.message {
+  text-align: center;
+}
+
 
 /* Drop zone */
 
