--- a/public/scss/video_player.scss
+++ b/public/scss/video_player.scss
@@ -1,45 +1,4 @@
-* {
-  box-sizing: border-box;
-}
-
-html, body {
-  margin: 0;
-  font-family: Inconsolata, sans-serif;
-  background-color: black;
-  color: #77dd77;
-}
-
-.content {
-  height: 100vh;
-  width: 100vw;
-  padding: 10px;
-  display: table;
-}
-
-/** Splash view **/
-
-.loading {
-  width: 100%;
-  height: 100%
-}
-
-.loading > p.message {
-  text-align: center;
-}
-
-
-/* Drop zone */
-
-.drop-zone {
-  border: 2px dashed #77dd77;
-  border-radius: 10px;
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-
-
-/* Video player */
+// VideoPlayer Component
 
 div.video-player-container {
   width: 100%;
@@ -55,10 +14,10 @@ div.video-controls {
 }
 
 div.inner-video-controls button {
-  background: black;
-  border: 1px solid #77dd77;
+  background: $bg-color;
+  border: 1px solid $primary-color;
   border-radius: 10px;
-  color: #77dd77;
+  color: $primary-color;
   padding: 10px;
   letter-spacing: 1px;
   cursor: pointer;
@@ -67,17 +26,18 @@ div.inner-video-controls button {
 }
 
 div.inner-video-controls button:hover {
-  background-color: #77dd77;
-  color: black;
+  background-color: $primary-color;
+  color: $bg-color;
 }
 
 
-/* Progress bar */
+// ProgressVideoBar Component
 
 div.progress-bar-timing {
   padding-left: 10px;
   padding-right: 10px;
   font-size: small;
+  color: $bg-light-color;
 }
 
 span.progress-bar-timing-duration {
@@ -91,10 +51,10 @@ div.progress-bar-container {
 
 div.progress-bar {
   display: flex;
-  background: #696969;
+  background: $bg-light-color;
   height: 1px;
 }
 
 div.progress-bar span {
-  background: #77dd77;
+  background: $primary-color;
 }
